# NursingSimulation

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: screen-and-audio-capture.json  screen-capture-web.json  screen_capture.json  wrtc_node.json  wrtc_node_with_rerun.json
nursing_simulation/: __init__.py  __main__.py  fastapi_server_node.py  webrtc_node.py  webrtc_service.py
static/: client.js  index.html
